cambio del estilo a: cohorte/edit, pensum/show. modificacion del app.js

--- a/views/postgrado/edit.jade
+++ b/views/postgrado/edit.jade
@@ -127,7 +127,7 @@ block content
                             .form-group
                                 h5.text-center
                                     button(type="submit").btn.btn-primary
-                                        i.fa.fa-plus-square
-                                        | &nbsp; Aceptar
+                                        i.fa.fa-save
+                                        | &nbsp; Guardar Cambios
 
                     br
