--- a/views/cohorte/edit.jade
+++ b/views/cohorte/edit.jade
@@ -1,38 +1,176 @@
 //
    Created by fabiancote on 7/18/14.
-h2 Editor de cohorte
-h3 #{programa.nombre}
-h4 #{postgrado.nombre}
+extends ../layout
+block content
+    .navbar.navbar-inverse.navbar
+        .container
+            .navbar-header
+                a(class="navbar-brand", href="#") Sistema EspSoft
+                button(class="navbar-toggle", type="button", data-toggle="collapse", data-target="#navbar-main")
+                    span.icon-bar
+                    span.icon-bar
+                    span.icon-bar
+            .navbar-collapse.collapse.navbar-responsive-collapse
+                ul.nav.navbar-nav
+                    li.active
+                        a(href="#") Postgrados
+                    li
+                        a(href="#") UFPS
+                ul.nav.navbar-nav.navbar-right
+                    li
+                        a(href="/logout")
+                            i.fa.fa-power-off
+                            | &nbsp; Cerrar Sesion
+    .container
+        ul.breadcrumb
+            li: a(href="/director/profile") Inicio
+            li: a(href="/postgrado/#{postgrado.id}") Postgrado
+            li: a(href="/cohorte/#{cohorte.id}") Cohorte
+            li.active Informacion de la cohorte
+        .row
+            .margin-auto
+                p.lead.text-center
+                    strong Informacion de la cohorte
+                    span.text-primary &nbsp; #{cohorte.nombre} - &nbsp; #{postgrado.nombre}
 
-h5 #{cohorte.resolucion} - #{cohorte.nombre}
+                p.lead.text-center
+                    span.text-muted &nbsp; Informacion general del Postgrado
+                    h5.text-center
+                        a(href="/cohorte/#{cohorte.id}").btn.btn-default.btn-xs
+                            i.fa.fa-chevron-circle-left
+                            | &nbsp; Volver a la cohorte
 
-form(method="POST", action="/cohorte/#{cohorte.id}")
-    input(type="hidden", name="_method", value="PUT")
-    input(type="hidden", name="id", value="#{cohorte.id}")
-    p fecha inicio de inscripciones
-        input(value="#{cohorte.fecha_inicio_insc.toISOString().slice(0, 10)}", name="finscrip", type="date", required)
-    p fecha limite de inscripciones
-        input(value="#{cohorte.fecha_limite_insc.toISOString().slice(0, 10)}", name="flinscrip", type="date", required)
-    p fecha de entrevista
-        input(value="#{cohorte.fecha_entrevista.toISOString().slice(0, 10)}", name="fentrevista", type="date", required)
-    p fecha de resultados
-        input(value="#{cohorte.fecha_resultados.toISOString().slice(0, 10)}", name="fresultados", type="date", required)
-    p fecha de matricula
-        input(value="#{cohorte.fecha_matricula.toISOString().slice(0, 10)}", name="fmatricula", type="date", required)
-    p fecha de introduccion al postgrado
-        input(value="#{cohorte.fecha_introduccion.toISOString().slice(0, 10)}", name="fintro", type="date", required)
-    p fecha de receso de clases
-        input(value="#{cohorte.fecha_receso.toISOString().slice(0, 10)}", name="freceso", type="date", required)
-    p fecha de terminacion de clases
-        input(value="#{cohorte.fecha_termina_clase.toISOString().slice(0, 10)}", name="ftermina", type="date", required)
-    p valor del postgrado
-        input(value="#{cohorte.valor}", name="valor", type="number", required)
-    p valor por comcepto de otros gastos
-        input(value="#{cohorte.otros}", name="otro", type="number", required)
-    p link de recorsus para el estudiante
-        input(value="#{cohorte.link}", name="link", type="text", required)
+                .well.bs-component
+                    form(method="POST", action="/cohorte/#{cohorte.id}").form-horizontal
+                        input(type="hidden", name="_method", value="PUT")
+                        input(type="hidden", name="id", value="#{cohorte.id}")
+
+                        faildset
+                            legend Datos Principales
+                            .form-group
+                                label(for="inputResolucion", class="col-lg-2 control-label") Resolucion
+                                .col-lg-10
+                                    .input-group
+                                        span.input-group-addon
+                                            i.fa.fa-gavel
+                                        input(type="text", name="resolucion", value="#{cohorte.resolucion}", required).form-control
+                                    p.lead.text-muted Referencia de identificacion otorgada en la aprobacion de la cohorte.
+
+                            .form-group
+                                label(for="inputnombre", class="col-lg-2 control-label") Nombre
+                                .col-lg-10
+                                    .input-group
+                                        span.input-group-addon
+                                            i.fa.fa-bookmark
+                                        input(type="text", name="nombre", value="#{cohorte.nombre}", required).form-control
+                                    p.lead.text-muted Nombre identificador de la cohorte.
+
+                            .form-group
+                                label(for="inputpensum", class="col-lg-2 control-label") Pensum
+                                .col-lg-10
+                                    h4.text-primary
+                                        i.fa.fa-book
+                                        | &nbsp; #{pensum.nombre}
+                                    p.lead.text-muted Pensum que rije la cohorte
+
+                            .form-group
+                                label(for="inputUrl", class="col-lg-2 control-label") Link
+                                .col-lg-10
+                                    .input-group
+                                        span.input-group-addon
+                                            i.fa.fa-link
+                                        input(value="#{cohorte.link}", name="link", type="text", required).form-control
+                                    p.lead.text-muted Direccion URL, donde se encuentra alojados los documentos academicos del postgrado.
+
+                            legend Precios del Postgrado
+                            .form-group
+                                label(for="inputValor", class="col-lg-2 control-label") Precio
+                                .col-lg-10
+                                    .input-group
+                                        span.input-group-addon
+                                            i.fa.fa-money
+                                        input(value="#{cohorte.valor}", name="valor", type="number", required).form-control
+                                    p.lead.text-muted Valor monetario Estipulado del postgrado.
+
+                            .form-group
+                                label(for="inputOtro", class="col-lg-2 control-label") Otros
+                                .col-lg-10
+                                    .input-group
+                                        span.input-group-addon
+                                            i.fa.fa-money
+                                        input(value="#{cohorte.otros}", name="otro", type="number", required).form-control
+                                    p.lead.text-muted Valor de otros gastos del postgrado siferentes al de la matricula.
 
 
-    p: button(type="submit") + Guardar Cambios
+                            legend Fechas pertinentes del Postgrado
+                            .form-group
+                                label(for="inputInscrip", class="col-lg-2 control-label") Inscripciones
+                                .col-lg-10
+                                    .input-group
+                                        span.input-group-addon
+                                            i.fa.fa-calendar
+                                        input(value="#{cohorte.fecha_inicio_insc.toISOString().slice(0, 10)}", name="finscrip", type="date", required).form-control
+                                    p.lead.text-muted Fecha en la que se inicia el recibimiento de solicitud de interesados para realizar el postgrado .
 
-br
+                            .form-group
+                                label(for="inputCloseInscrip", class="col-lg-2 control-label") Cierre Inscripciones
+                                .col-lg-10
+                                    .input-group
+                                        span.input-group-addon
+                                            i.fa.fa-calendar
+                                        input(value="#{cohorte.fecha_limite_insc.toISOString().slice(0, 10)}", name="flinscrip", type="date", required).form-control
+                                    p.lead.text-muted Fecha limite para recibir solicitudes de inscripcion del postgrado.
+
+                            .form-group
+                                label(for="inputentrevista", class="col-lg-2 control-label") Entrevista
+                                .col-lg-10
+                                    .input-group
+                                        span.input-group-addon
+                                            i.fa.fa-calendar
+                                        input(value="#{cohorte.fecha_entrevista.toISOString().slice(0, 10)}", name="fentrevista", type="date", required).form-control
+                                    p.lead.text-muted Fecha estimada para la realizacion de las entrevistas a las personas interesadas en realizar el postgrado.
+
+                            .form-group
+                                label(for="inputresultados", class="col-lg-2 control-label") Resultados
+                                .col-lg-10
+                                    .input-group
+                                        span.input-group-addon
+                                            i.fa.fa-calendar
+                                        input(value="#{cohorte.fecha_resultados.toISOString().slice(0, 10)}", name="fresultados", type="date", required).form-control
+                                    p.lead.text-muted Fecha en la que se daran a conocer los resultados de las entrevistas, de las personas adminitadas para realizar el postgrado.
+
+                            .form-group
+                                label(for="inputMatricula", class="col-lg-2 control-label") Matricula
+                                .col-lg-10
+                                    .input-group
+                                        span.input-group-addon
+                                            i.fa.fa-calendar
+                                        input(value="#{cohorte.fecha_matricula.toISOString().slice(0, 10)}", name="fmatricula", type="date", required).form-control
+                                    p.lead.text-muted Fecha en que se debe realizar por parte de las personas adminitidas al postgrado, el pago por concepto de la matricula.
+
+                            .form-group
+                                label(for="inputIntroduccion", class="col-lg-2 control-label") Introduccion
+                                .col-lg-10
+                                    .input-group
+                                        span.input-group-addon
+                                            i.fa.fa-calendar
+                                        input(value="#{cohorte.fecha_introduccion.toISOString().slice(0, 10)}", name="fintro", type="date", required).form-control
+                                    p.lead.text-muted Fecha donde se realizara la reunion de introduccion a los estudiantes matriculados del postgrado.
+
+                            .form-group
+                                label(for="inputIntroduccion", class="col-lg-2 control-label") Termina
+                                .col-lg-10
+                                    .input-group
+                                        span.input-group-addon
+                                            i.fa.fa-calendar
+                                        input(value="#{cohorte.fecha_termina_clase.toISOString().slice(0, 10)}", name="ftermina", type="date", required).form-control
+                                    p.lead.text-muted Fecha Estimada en la que el postgrado culmina.
+
+                            legend
+                            .form-group
+                                h5.text-center
+                                    button(type="submit").btn.btn-primary
+                                        i.fa.fa-save
+                                        | &nbsp; Guardar Cambios
+
+                br
