--- a/views/pensum/show.jade
+++ b/views/pensum/show.jade
@@ -1,20 +1,141 @@
-//
-   Created by Cesar Fabian Cote Guerrero - Universidad Francisco de Paula Santander - 2014.
-h1 Programa: #{programa.nombre}
-h2 postgrado: #{postgrado.nombre}
-h2 pensum: #{pensum.nombre}
+extends ../layout
+block content
+    .navbar.navbar-inverse.navbar-fixed-top
+        .container
+            .navbar-header
+                a(class="navbar-brand", href="#") Sistema EspSoft
+                button(class="navbar-toggle", type="button", data-toggle="collapse", data-target="#navbar-main")
+                    span.icon-bar
+                    span.icon-bar
+                    span.icon-bar
+            .navbar-collapse.collapse.navbar-responsive-collapse
+                ul.nav.navbar-nav
+                    li.active
+                        a(href="#") Postgrados
+                    li
+                        a(href="#") UFPS
+                ul.nav.navbar-nav.navbar-right
+                    li
+                        a(href="/logout")
+                            i.fa.fa-power-off
+                            | &nbsp; Cerrar Sesion
+    .row.bg-black.fix-top.margin-botton
+        .container
+            .col-lg-3
+                h2.text-center
+                    span.lead #{programa.nombre}
+                p.text-center
+                    span.label.label-info
+                        i.fa.fa-bookmark
+                        | &nbsp; Programa
+                legend
+                h3.text-center
+                    span.lead #{postgrado.nombre}
+                p.text-center
+                    span.label.label-default
+                        i.fa.fa-mortar-board
+                        | &nbsp; Postgrado
+                p.text-center
+                    a(href="/postgrado/#{postgrado.id}").btn.btn-default.btn-xs
+                        i.fa.fa-chevron-circle-left
+                        | &nbsp; volver al postgrado
+            .col-lg-6
+                h2.text-center
+                    span #{pensum.nombre}
+                    br
+                p.text-center
+                    span.label.label-default
+                        i.fa.fa-gavel
+                        | &nbsp; Cohorte
+                table.table
+                    tbody
+                        tr
+                            td
+                                p.text-center Materias
+                                h2.text-center
+                                    span.label.label-primary.text-size #{num}
+                                br
+                                p.text-center
+                                    a(href="/asignatura/new/#{pensum.id}").btn.btn-info.btn-sm
+                                        i.fa.fa-plus-square
+                                        | &nbsp; Crear nueva
+            .col-lg-3
+                h2.text-center
+                    span.lead
+                        i.fa.fa-info-circle
+                        | &nbsp; Informacion
+                .well.well-lg
+                    p
+                        strong Resolucion
+                        br
+                        span.text-muted #{pensum.resolucion}
+                    p
+                        strong Fecha de Creacion
+                        br
+                        span.text-muted #{pensum.fecha.toISOString().slice(0, 10)}
+                    p.text-center
+                        a(href="#").btn.btn-info.btn-xs
+                            i.fa.fa-eye
+                            | &nbsp; Ver Informacion
 
-h3 Materias pertenecientes al pensum:
-a(href="/asignatura/new/#{pensum.id}") +Crear Asignatura
-- var semaforo = {nivel:0}
-ul
-    each asignatura in asignaturas
-        if(semaforo.nivel!=asignatura.nivel)
-            li materias de #{asignatura.nivel}
-            li: a(href="/asignatura/#{asignatura.id}") #{asignatura.nombre}
-            - semaforo.nivel=asignatura.nivel
-        else
-            li: a(href="/asignatura/#{asignatura.id}") #{asignatura.nombre}
-br
-a(href="/postgrado/#{postgrado.id}") &#9166;Regresar
-br
+    .row
+        .container
+            .col-lg-12
+                .panel.panel-default
+                    .panel-heading
+                        span.badge.pull-right.badge-fix #{num}
+                        h5
+                            i.fa.fa-paste
+                            |&nbsp; Materias del Pensum
+                    .panel-body
+                        -s=0
+                            -count=1
+                            table.table
+                                thead
+                                    tr
+                                        th(width="10%").text-center #
+                                        th(width="40%").text-center Nombre de la materia
+                                        th(width="10%").text-center Creditos
+                                        th(width="10%").text-center Nivel
+                                        th(width="30%").text-center Accion
+
+                            each materia in asignaturas
+                                -if (s != materia.nivel)
+                                    .list-group-item.disabled Materias del nivel #{materia.nivel}
+                                    .list-group-item
+                                        table.table
+                                            tbody
+                                                tr
+                                                    td(width="10%").text-center
+                                                        h4.text-center
+                                                            span.badge #{count}
+                                                    td(width="40%").text-center
+                                                        h4 #{materia.nombre}
+                                                    td(width="10%").text-center
+                                                        h4 #{materia.cradito}
+                                                    td(width="10%").text-center
+                                                        h4 #{materia.nivel}
+                                                    td(width="30%").text-center
+                                                        a(href="#").btn.btn-default.btn-group-sm
+                                                            i.fa.fa-search
+                                                            | &nbsp; Ver
+                                    -s = materia.nivel
+                                -else
+                                    .list-group-item
+                                        table.table
+                                            tbody
+                                                tr
+                                                    td(width="10%").text-center
+                                                        h4.text-center
+                                                            span.badge #{count}
+                                                    td(width="40%").text-center
+                                                        h4 #{materia.nombre}
+                                                    td(width="10%").text-center
+                                                        h4 #{materia.cradito}
+                                                    td(width="10%").text-center
+                                                        h4 #{materia.nivel}
+                                                    td(width="30%").text-center
+                                                        a(href="#").btn.btn-default.btn-group-sm
+                                                            i.fa.fa-search
+                                                            | &nbsp; Ver
+                                -count++
